tests/specs/ecosystem/clappcodes/transporter/0_2_5.test
clappcodes/transporter/0.2.5
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
    at file://<tmpdir>/readable/from-event.ts:11:41

